test-assets/expected/all-in-one--no-quotes-preserved/ingress-controllers/12--persistentvolumeclaim--traefik-acme.yml
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  annotations:
    example.com/generated-by: kustomize
    example.com/kustomize-component: ingresses
    example.com/what: Store Let's Encrypt TLS certificates
  name: traefik-acme
  namespace: ingress-controllers
spec:
  accessModes:
    - ReadWriteOnce
  resources:
    requests:
      storage: 500Mi
  storageClassName: standard
